--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -105,7 +105,8 @@
 
             <button type="submit" class="btn btn-warning" onclick="window.location.href='/theform'">
                 Correct
-                Information</button>
+                Information
+            </button>
 
 
 
